--- a/css/styles.css
+++ b/css/styles.css
@@ -1217,6 +1217,11 @@ input.toggleMenu:checked ~ ul {
   flex-direction: row;
   justify-content: space-between; }
 
+.team-overlay__icon:hover {
+  color: black;
+  opacity: 0.5;
+}
+
 .team-overlay__icon--twitter {
   padding: 10px;
   width: 42px;
@@ -1244,8 +1249,7 @@ input.toggleMenu:checked ~ ul {
   align-items: center; }
 
 .team-card__name {
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 10px 0 10px 0;
   font-family: 'Open Sans';
   font-weight: 600;
   font-size: 18px;
